--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container">
-			<a class="navbar-brand" href="#">Ownly Marketplace</a>
+			<a class="navbar-brand" href="#">Ownly Marketplace <small>(BSC Testnet)</small></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -32,6 +32,10 @@
 			</div>
 		</div>
 	</nav>
+	
+	<div class="container pt-5">
+		<div class="row" id="tokens-container"></div>
+	</div>
 	
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
