--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
 	<meta name="description" content="OWNLY is a governance, token-based NFT platform that enable creators and collectors optimize the authentic value of NFT assets. Ownly is created to be a meeting place of artworks and collectors in the crypto space.">
 	<meta name="author" content="Ownly">
 	
-	<title>Ownly Marketplace</title>
-	<link rel="icon" href="img/ownly.png">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="fontawesome/css/all.css">
-	<link rel="stylesheet" href="css/style.css?v=1">
-	
 	<meta property="og:url" content="https://ownly.io" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Ownly: Buy, own, collect, and trade 1 of 1 edition crypto artworks by talented artists." />
 	<meta property="og:description" content="OWNLY is a governance, token-based NFT platform that enable creators and collectors optimize the authentic value of NFT assets. Ownly is created to be a meeting place of artworks and collectors in the crypto space." />
 	<meta property="og:image" content="https://ownly.io/img/og-image-2.jpg" />
+	
+	<title>Ownly Marketplace</title>
+	<link rel="icon" href="img/ownly.png">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="fontawesome/css/all.css">
+	<link rel="stylesheet" href="js/alertifyjs/css/alertify.min.css" />
+	<link rel="stylesheet" href="js/alertifyjs/css/themes/default.min.css" />
+	<link rel="stylesheet" href="css/style.css?v=1">
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -37,10 +39,48 @@
 		<div class="row" id="tokens-container"></div>
 	</div>
 	
+	<div class="modal fade" id="modal-approve" tabindex="-1">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title">Post Item For Sale</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<div>This will give Ownly Marketplace an access to transfer your token once sold.</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+					<button type="button" class="btn btn-primary" id="approve">Confirm</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div class="modal fade" id="modal-create-market-item" tabindex="-1">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title">Post Item For Sale</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<small>Price</small>
+					<input type="number" class="form-control" name="price" id="price" placeholder="Price" />
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+					<button type="button" class="btn btn-primary" id="create-market-item">Submit</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="js/web3.min.js"></script>
-	<script src="js/ownly-token-abi.js"></script>
-	<script src="js/script.js?v=3"></script>
+	<script src="js/abi.js"></script>
+	<script src="js/alertifyjs/alertify.min.js"></script>
+	<script src="js/script.js?v=4"></script>
 </body>
 </html>
