Add creation of market sale

--- a/index.html
+++ b/index.html
@@ -76,11 +76,29 @@
 		</div>
 	</div>
 	
+	<div class="modal fade" id="modal-create-market-sale" tabindex="-1">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title">Post Item For Sale</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<div>Are you sure you want to purchase this item?</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+					<button type="button" class="btn btn-primary" id="create-market-sale">Confirm</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="js/web3.min.js"></script>
-	<script src="js/abi.js"></script>
 	<script src="js/alertifyjs/alertify.min.js"></script>
-	<script src="js/script.js?v=5"></script>
+	<script src="js/abi.js?v=6"></script>
+	<script src="js/script.js?v=6"></script>
 </body>
 </html>
