Add feature to handle if browser has injected web3 or not

--- a/index.html
+++ b/index.html
@@ -19,25 +19,26 @@
 	<link rel="stylesheet" href="fontawesome/css/all.css">
 	<link rel="stylesheet" href="js/alertifyjs/css/alertify.min.css" />
 	<link rel="stylesheet" href="js/alertifyjs/css/themes/default.min.css" />
-	<link rel="stylesheet" href="css/style.css?v=9">
+	<link rel="stylesheet" href="css/style.css?v=10">
 </head>
 <body>
 	<div class="d-none" id="app" style="overflow-x:hidden">
 		<nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom fixed-top">
 			<div class="container">
 				<div class="d-flex align-items-center" style="min-height:63px">
-					<a class="navbar-brand m-0" href="index.html">
+					<a class="navbar-brand m-0" href="/">
 						<img src="img/ownly/own-token.webp" width="53" alt="Ownly">
 					</a>
+					<a href="/" class="link-color-1 font-size-170 rubik-black ps-2 text-decoration-none">OWNLY</a>
 				</div>
 				
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-grow:initial">
-					<ul class="navbar-nav mb-2 mb-lg-0 py-3">
+					<ul class="navbar-nav mb-2 mb-lg-0">
 						<li class="nav-item">
-							<button type="button" class="btn btn-custom-8 font-size-90 d-none" id="connect-to-metamask">Connect to Metamask</button>
+							<button type="button" class="btn btn-custom-9 shadow-sm font-size-90 py-2 px-4 d-none" id="connect-to-metamask" style="border-radius:100px">Connect Wallet</button>
 							<div class="d-none" id="account-address"></div>
 						</li>
 					</ul>
@@ -175,6 +176,6 @@
 	<script src="js/web3.min.js"></script>
 	<script src="js/alertifyjs/alertify.min.js"></script>
 	<script src="js/abi.js?v=9"></script>
-	<script src="js/script.js?v=11"></script>
+	<script src="js/script.js?v=12"></script>
 </body>
 </html>
