Update header content

--- a/home.html
+++ b/home.html
@@ -1,8 +1,26 @@
-<div class="bg-color-6" style="padding-top:80px">
-	<div class="text-center text-white py-1">THE TITANS ARE COMING!</div>
+<div class="background-image-cover bg-color-18 position-relative" style="background-image:url('img/bg/home.webp'); min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
+	<div class="position-absolute w-100 bg-color-6" style="top:0; left:0">
+		<div class="container">
+			<div class="text-center text-white font-size-70 font-size-md-90 py-1">MAKE SURE TO POINT YOUR WALLET ON BINANCE SMART CHAIN NETWORK</div>
+		</div>
+	</div>
+	
+	<div class="position-absolute w-100 bg-white" style="bottom:0; left:0">
+		<div class="container py-3 py-md-4">
+			<div class="row align-items-center">
+				<div class="col-md-6 mb-3 mb-md-4 mb-lg-0">
+					<div class="neo-black font-size-160 font-size-md-220 font-size-xl-250 line-height-100 mb-1">TITANS OF THE INDUSTRY</div>
+					<div class="font-size-100 font-size-md-120 font-size-xl-140">by Eugene Oligo</div>
+				</div>
+				
+				<div class="col-md-6">
+					<div class="font-size-100 font-size-xl-120 neo-black mb-2">ABOUT THE COLLECTION</div>
+					<div class="font-size-80 font-size-xl-90 line-height-120">Created by multimedia artist Eugene Oligo, our socmed collaboration entitled Titans of the Industry features the pioneers, entrepreneurs, and the 'titans' of the crypto space. This collection will surely help you recognize the 'big ones', their feats, and their impact on the blockchain world.</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
-
-<div class="background-image-cover bg-color-18" style="background-image:url('img/bg/titans-are-coming.jpg'); min-height:calc(100vh - 107px)"></div>
 
 <div class="bg-color-18">
 	<div class="container py-5">
