Fix unable to access contract methods and add purchasing function in home page

--- a/token.html
+++ b/token.html
@@ -10,7 +10,7 @@
 			<div class="neo-bold font-size-140 mb-4" id="token-price"></div>
 			
 			<div class="mb-4 d-none">
-				<button class="btn btn-secondary px-4" id="create-market-sale-confirmation" style="width:172px">PURCHASE</button>
+				<button class="btn btn-secondary px-4 create-market-sale-confirmation" style="width:172px">PURCHASE</button>
 			</div>
 			
 			<div class="mb-4 d-none">
