--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
-						<h5 class="modal-title">Post Item For Sale</h5>
+						<h5 class="modal-title">Purchase Token</h5>
 						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 					</div>
 					<div class="modal-body">
@@ -176,6 +176,6 @@
 	<script src="js/web3.min.js"></script>
 	<script src="js/alertifyjs/alertify.min.js"></script>
 	<script src="js/abi.js?v=9"></script>
-	<script src="js/script.js?v=13"></script>
+	<script src="js/script.js?v=14"></script>
 </body>
 </html>
