Add NFT collection (in carousel) in view token page

--- a/token.html
+++ b/token.html
@@ -1,5 +1,5 @@
-<div class="container pb-5 mb-5" style="padding-top:80px">
-	<div class="row align-items-center pt-5" id="token-card">
+<div class="container pb-5" style="padding-top:80px">
+	<div class="row align-items-center pt-5 mb-5" id="token-card">
 		<div class="col-md-6 pe-4">
 			<img src="" class="w-100" id="token-image" alt="Token" />
 		</div>
@@ -31,5 +31,55 @@
 				<a href="" target="_blank" id="token-original-image" class="btn btn-secondary px-4" style="width:172px">VIEW ORIGINAL</a>
 			</div>
 		</div>
+	</div>
+</div>
+
+<div class="bg-color-18 pb-md-5">
+	<div class="container py-5">
+		<div class="neo-bold font-size-130 font-size-lg-160 text-center mb-4 mb-md-5">YOU MIGHT LIKE ON THIS COLLECTION</div>
+		
+		<div class="px-5 d-none d-xl-block">
+			<div id="related-tokens-container-xl" class="carousel slide px-5">
+				<div class="carousel-inner"></div>
+				<button class="carousel-control-prev" type="button" data-bs-target="#related-tokens-container-xl" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#related-tokens-container-xl" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
+			</div>
+		</div>
+		
+		<div class="px-5 d-none d-md-block d-xl-none">
+			<div id="related-tokens-container-md" class="carousel slide px-5">
+				<div class="carousel-inner"></div>
+				<button class="carousel-control-prev" type="button" data-bs-target="#related-tokens-container-md" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#related-tokens-container-md" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
+			</div>
+		</div>
+		
+		<div class="px-5 d-block d-md-none">
+			<div id="related-tokens-container-xs" class="carousel slide px-4 px-sm-5">
+				<div class="carousel-inner"></div>
+				<button class="carousel-control-prev" type="button" data-bs-target="#related-tokens-container-xs" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#related-tokens-container-xs" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
+			</div>
+		</div>
+		
+		<div class="d-none" id="tokens-container"></div>
 	</div>
 </div>
