Add loading screen and add "Meet the Artist" section in view token page

--- a/token.html
+++ b/token.html
@@ -1,7 +1,7 @@
 <div class="container pb-5" style="padding-top:80px">
 	<div class="row align-items-center pt-5 mb-5" id="token-card">
 		<div class="col-md-6 pe-4">
-			<img src="" class="w-100" id="token-image" alt="Token" />
+			<img src="img/thumbnails/token.webp" class="w-100" id="token-image" alt="Token" />
 		</div>
 		
 		<div class="col-md-6 ps-4">
@@ -17,7 +17,7 @@
 				<button class="btn btn-secondary px-4" id="create-market-item-confirmation">POST ITEM FOR SALE</button>
 			</div>
 			
-			<button class="btn btn-secondary w-100 sell-token-confirmation d-none" data-token-id="' + i + '">Sell</button>
+			<button class="btn btn-secondary w-100 sell-token-confirmation d-none">Sell</button>
 			
 			<div class="font-size-110 neo-bold mb-1">DESCRIPTION</div>
 			<div class="font-size-100 mb-4 pb-1" id="token-description">2021</div>
