Set up environment variables

--- a/token.html
+++ b/token.html
@@ -1,7 +1,7 @@
 <div class="container pb-5" style="padding-top:80px">
 	<div class="row align-items-center pt-5 mb-5" id="token-card">
 		<div class="col-md-6 pe-4">
-			<img src="img/thumbnails/token.webp" class="w-100" id="token-image" alt="Token" />
+			<img src="img/thumbnails/token.webp" class="w-100 border-1 shadow-sm" id="token-image" alt="Token" />
 		</div>
 		
 		<div class="col-md-6 ps-4">
