--- a/index.html
+++ b/index.html
@@ -241,8 +241,9 @@
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="js/web3.min.js"></script>
-	<script src="js/alertifyjs/alertify.min.js"></script>
 	<script src="js/abi.js?v=9"></script>
-	<script src="js/script.js?v=20"></script>
+	<script src="js/alertifyjs/alertify.min.js"></script>
+	<script src="js/ellipsis.min.js"></script>
+	<script src="js/script.js?v=21"></script>
 </body>
 </html>
