Update view token page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="fontawesome/css/all.css">
 	<link rel="stylesheet" href="js/alertifyjs/css/alertify.min.css" />
 	<link rel="stylesheet" href="js/alertifyjs/css/themes/default.min.css" />
-	<link rel="stylesheet" href="css/style.css?v=13">
+	<link rel="stylesheet" href="css/style.css?v=14">
 </head>
 <body>
 	<div style="overflow-x:hidden">
@@ -151,7 +151,7 @@
 			</div>
 			
 			<div class="modal fade" id="modal-approve" tabindex="-1">
-				<div class="modal-dialog">
+				<div class="modal-dialog modal-dialog-centered">
 					<div class="modal-content">
 						<div class="modal-header">
 							<h5 class="modal-title">Post Item For Sale</h5>
@@ -169,10 +169,10 @@
 			</div>
 			
 			<div class="modal fade" id="modal-create-market-item" tabindex="-1">
-				<div class="modal-dialog">
+				<div class="modal-dialog modal-dialog-centered">
 					<div class="modal-content">
 						<div class="modal-header">
-							<h5 class="modal-title">Purchase Token</h5>
+							<h5 class="modal-title">Set Price</h5>
 							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 						</div>
 						<div class="modal-body">
@@ -188,10 +188,10 @@
 			</div>
 			
 			<div class="modal fade" id="modal-create-market-sale" tabindex="-1">
-				<div class="modal-dialog">
+				<div class="modal-dialog modal-dialog-centered">
 					<div class="modal-content">
 						<div class="modal-header">
-							<h5 class="modal-title">Post Item For Sale</h5>
+							<h5 class="modal-title">Purchase Token</h5>
 							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 						</div>
 						<div class="modal-body">
@@ -206,7 +206,7 @@
 			</div>
 			
 			<div class="modal fade" id="modal-no-metamask-installed" tabindex="-1">
-				<div class="modal-dialog">
+				<div class="modal-dialog modal-dialog-centered">
 					<div class="modal-content">
 						<div class="modal-header">
 							<h5 class="modal-title">Metamask is currently not installed</h5>
@@ -244,6 +244,6 @@
 	<script src="js/abi.js?v=9"></script>
 	<script src="js/alertifyjs/alertify.min.js"></script>
 	<script src="js/ellipsis.min.js"></script>
-	<script src="js/script.js?v=21"></script>
+	<script src="js/script.js?v=22"></script>
 </body>
 </html>
