--- a/artist.html
+++ b/artist.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="bg-white">
 		<div class="container py-5">
-			<div class="font-size-120 neo-bold mb-5 pb-1" style="letter-spacing:0.1em">MEET THE ARTIST</div>
+			<div class="font-size-120 neo-bold mb-5 pb-2" style="letter-spacing:0.1em">MEET THE ARTIST</div>
 		</div>
 	</div>
 	
@@ -9,10 +9,10 @@
 		<div class="container py-5">
 			<div class="d-flex flex-column flex-md-row">
 				<div class="pe-md-5 mb-4" id="artist-image" style="margin-top:-120px">
-					<div class="background-image-cover w-100 rounded-circle shadow-lg" style="background-image:url('img/artists/Eugene-Oligo.webp'); padding-top:100%"></div>
+					<div class="background-image-cover w-100 shadow-lg" style="background-image:url('img/artists/Eugene-Oligo.webp'); padding-top:100%"></div>
 				</div>
 				
-				<div class="ps-md-3 ps-xl-4">
+				<div class="">
 					<div class="neo-black font-size-240 mb-3">EUGENE OLIGO</div>
 					
 					<div class="d-flex align-items-center mb-4 mb-md-5">
