Update design and content, and add fancybox to view original token image

--- a/artist.html
+++ b/artist.html
@@ -34,8 +34,8 @@
 					</div>
 					
 					<div>
-						<p class="text-color-6 font-size-110">Eugene is a multimedia artist that focuses on digital illustrations, digital painting, concept art 2D and 3D. He also creates traditional artworks such as paintings, portraits and so on.</p>
-						<p class="text-color-6 font-size-110">He served many clients locally, nationally and internationally. He had a collaboration project with Titus pens, and was invited to be a guest artist to make doodle wall art with other artists.</p>
+						<p class="text-color-6 font-size-110">Eugene is a multimedia artist that focuses on digital illustrations, digital painting, and both 2D and 3D concept art. He also creates traditional artworks such as paintings and portraits.</p>
+						<p class="text-color-6 font-size-110">He served many clients locally, nationally, and internationally. He had a collaboration project with Titus pens as the guest artist who made a doodle wall art with other creatives.</p>
 					</div>
 				</div>
 			</div>
