--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 	<link rel="stylesheet" href="fontawesome/css/all.css">
 	<link rel="stylesheet" href="js/alertifyjs/css/alertify.min.css" />
 	<link rel="stylesheet" href="js/alertifyjs/css/themes/default.min.css" />
-	<link rel="stylesheet" href="css/style.css?v=14">
+	<link rel="stylesheet" href="js/fancybox/fancybox.css" />
+	<link rel="stylesheet" href="css/style.css?v=15">
 </head>
 <body>
 	<div style="overflow-x:hidden">
@@ -244,6 +245,7 @@
 	<script src="js/abi.js?v=9"></script>
 	<script src="js/alertifyjs/alertify.min.js"></script>
 	<script src="js/ellipsis.min.js"></script>
-	<script src="js/script.js?v=22"></script>
+	<script src="js/fancybox/fancybox.umd.js"></script>
+	<script src="js/script.js?v=23"></script>
 </body>
 </html>
