--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 				
 				<div class="col-md-6">
 					<div class="font-size-100 font-size-xl-120 neo-black mb-2">ABOUT THE COLLECTION</div>
-					<div class="font-size-80 font-size-xl-90 line-height-120">Created by multimedia artist Eugene Oligo, our socmed collaboration entitled Titans of the Industry features the pioneers, entrepreneurs, and the 'titans' of the crypto space. This collection will surely help you recognize the 'big ones', their feats, and their impact on the blockchain world.</div>
+					<div class="font-size-80 font-size-xl-90 line-height-120">Created by multimedia artist Eugene Oligo, our collaboration entitled Titans of the Industry features the pioneers, entrepreneurs, and titans of the crypto space. This collection will surely help you recognize the big ones, their feats, and their impact on the blockchain world.</div>
 				</div>
 			</div>
 		</div>
