--- a/token.html
+++ b/token.html
@@ -1,21 +1,22 @@
 <div class="container pb-5" style="padding-top:80px">
-	<div class="row pt-5 mb-5" id="token-card">
-		<div class="col-md-5 pe-4">
-			<a href="" target="_blank" id="token-original-image">
+	<div class="row mb-5" id="token-card">
+		<div class="col-md-6 col-xll-5 pe-lg-3 pe-xl-4">
+			<a href="" data-fancybox id="token-original-image">
 				<img src="img/thumbnails/token.webp" class="w-100 border-1 shadow-sm" id="token-image" alt="Token" />
 			</a>
+			<img src="" class="d-none" id="token-original-image-preload" alt="Token" />
 		</div>
 		
-		<div class="col-md-7 ps-4 mt-5">
-			<div class="neo-black font-size-250 mb-1" id="token-name"></div>
+		<div class="col-md-6 col-xll-7 ps-lg-3 ps-xl-4 mt-4 mt-md-5">
+			<div class="neo-black font-size-200 font-size-md-250 mb-1" id="token-name"></div>
 			<div class="font-size-110 neo-bold mb-4 pb-1">#1 of 1 - Single Edition</div>
 			
 			<div class="row align-items-center d-none mb-4">
 				<div class="col-6">
-					<div class="font-size-120 font-size-md-250 neo-black" id="token-price"></div>
+					<div class="font-size-200 font-size-md-250 neo-black" id="token-price"></div>
 				</div>
 				<div class="col-6 text-end">
-					<button class="btn btn-custom-2 font-size-100 font-size-md-120 neo-bold px-5 link create-market-sale-confirmation" style="border-radius:15px">OWN NOW</button>
+					<button class="btn btn-custom-2 font-size-110 font-size-md-120 neo-bold px-4 px-md-5 link create-market-sale-confirmation" style="border-radius:15px">OWN NOW</button>
 				</div>
 			</div>
 			
@@ -47,11 +48,11 @@
 				</div>
 				<div class="accordion-item">
 					<h2 class="accordion-header" id="headingTwo">
-						<button class="accordion-button neo-bold font-size-60 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+						<button class="accordion-button neo-bold font-size-60" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 							Properties
 						</button>
 					</h2>
-					<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
+					<div id="collapseTwo" class="accordion-collapse collapse show" aria-labelledby="headingTwo">
 						<div class="accordion-body px-4">
 							<div class="row" id="token-attributes"></div>
 						</div>
@@ -65,7 +66,7 @@
 					</h2>
 					<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
 						<div class="accordion-body">
-							Created by multimedia artist Eugene Oligo, our socmed collaboration entitled Titans of the Industry features the pioneers, entrepreneurs, and the 'titans' of the crypto space. This collection will surely help you recognize the 'big ones', their feats, and their impact on the blockchain world.
+							Created by multimedia artist Eugene Oligo, our collaboration entitled Titans of the Industry features the pioneers, entrepreneurs, and titans of the crypto space. This collection will surely help you recognize the big ones, their feats, and their impact on the blockchain world.
 						</div>
 					</div>
 				</div>
@@ -99,6 +100,10 @@
 									<td class="py-1" id="token-owner"></td>
 								</tr>
 							</table>
+							
+							<div class="mt-2">
+								<a href="#" target="_blank" class="btn btn-custom-2 px-4" id="token-bscscan-link">View on BscScan</a>
+							</div>
 						</div>
 					</div>
 				</div>
