Update homepage banner

--- a/home.html
+++ b/home.html
@@ -1,22 +1,47 @@
-<div class="background-image-cover bg-color-18 position-relative" style="background-image:url('img/bg/home.webp'); min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
-	<div class="position-absolute w-100 bg-color-6" style="top:0; left:0">
+<div class="position-relative" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
+	<div class="position-absolute w-100 bg-color-6" style="top:0; left:0; z-index:99">
 		<div class="container">
 			<div class="text-center text-white font-size-70 font-size-md-90 py-1">MAKE SURE TO POINT YOUR WALLET ON BINANCE SMART CHAIN NETWORK</div>
 		</div>
 	</div>
 	
-	<div class="position-absolute w-100 bg-white" style="bottom:0; left:0">
-		<div class="container py-3 py-md-4">
-			<div class="row align-items-center">
-				<div class="col-md-6 mb-3 mb-md-4 mb-lg-0">
-					<div class="neo-black font-size-160 font-size-md-220 font-size-xl-250 line-height-100 mb-1">TITANS OF THE INDUSTRY</div>
-					<div class="font-size-100 font-size-md-120 font-size-xl-140">by Eugene Oligo</div>
+	<div class="bg-color-7 position-absolute h-100" style="top:0; left:0; width:100%; z-index:-1"></div>
+	<div class="bg-white position-absolute h-100 d-none d-lg-block" style="top:0; left:70%; width:30%; z-index:-1"></div>
+	
+	<div class="container">
+		<div class="d-flex w-100" style="min-height:calc(100vh - 80px)">
+			<div id="banner-left" style="">
+				<div class="d-flex flex-column justify-content-center h-100">
+					<div class="text-color-9 alegreya-italic font-size-160 font-size-md-200 mb-4"><span class="alegreya-bold-italic">OWNLY</span> PRESENTS</div>
+					<div class="text-white neo-bold font-size-360 font-size-md-500 line-height-90 mb-2">TITANS of<br>INDUSTRY</div>
+					<div class="position-relative mb-3 mb-md-5 pb-5">
+						<div class="bg-color-19 neo-black text-color-6 font-size-160 font-size-md-200 py-2">by Eugene Oligo</div>
+						<div class="bg-color-19 neo-black text-color-6 font-size-160 font-size-md-200 py-2 position-absolute w-100" style="top:0; left:-99%; z-index:-1">&nbsp;</div>
+						<div class="bg-color-19 neo-black text-color-6 font-size-160 font-size-md-200 py-2 position-absolute w-100" style="top:0; right:-99%; z-index:-1">&nbsp;</div>
+					</div>
+					<div class="text-white neo-bold font-size-120 font-size-md-160 mb-4">ABOUT THE COLLECTION</div>
+					<div class="text-white neo-bold font-size-80 mb-2">Created by multimedia artist Eugene Oligo, our collaboration entitled Titans of Industry features the pioneers, entrepreneurs, and titans of the crypto space. This collection will surely help you recognize the big ones, their feats, and their impact on the blockchain world.</div>
 				</div>
-				
-				<div class="col-md-6">
-					<div class="font-size-100 font-size-xl-120 neo-black mb-2">ABOUT THE COLLECTION</div>
-					<div class="font-size-80 font-size-xl-90 line-height-120">Created by multimedia artist Eugene Oligo, our collaboration entitled Titans of the Industry features the pioneers, entrepreneurs, and titans of the crypto space. This collection will surely help you recognize the big ones, their feats, and their impact on the blockchain world.</div>
-				</div>
+			</div>
+			
+			<div class="d-none d-lg-block py-2" id="banner-right" style="">
+				<div class="background-image-contain" style="background-image:url('img/bg/Titans_BannerImage.webp'); height:calc(100% + 30px); width:calc(100% + 200px); z-index:99"></div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="position-absolute w-100 bg-white d-none" style="bottom:0; left:0">
+	<div class="container py-3 py-md-4">
+		<div class="row align-items-center">
+			<div class="col-md-6 mb-3 mb-md-4 mb-lg-0">
+				<div class="neo-black font-size-160 font-size-md-220 font-size-xl-250 line-height-100 mb-1">TITANS OF INDUSTRY</div>
+				<div class="font-size-100 font-size-md-120 font-size-xl-140">by Eugene Oligo</div>
+			</div>
+			
+			<div class="col-md-6">
+				<div class="font-size-100 font-size-xl-120 neo-black mb-2">ABOUT THE COLLECTION</div>
+				<div class="font-size-80 font-size-xl-90 line-height-120">Created by multimedia artist Eugene Oligo, our collaboration entitled Titans of Industry features the pioneers, entrepreneurs, and titans of the crypto space. This collection will surely help you recognize the big ones, their feats, and their impact on the blockchain world.</div>
 			</div>
 		</div>
 	</div>
