--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="js/alertifyjs/css/alertify.min.css" />
 	<link rel="stylesheet" href="js/alertifyjs/css/themes/default.min.css" />
 	<link rel="stylesheet" href="js/fancybox/fancybox.css" />
-	<link rel="stylesheet" href="css/style.css?v=15">
+	<link rel="stylesheet" href="css/style.css?v=16">
 </head>
 <body>
 	<div style="overflow-x:hidden">
@@ -52,7 +52,7 @@
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle text-color-6" href="#" id="account-address" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
 								<ul class="dropdown-menu" aria-labelledby="account-address">
-									<li><a class="dropdown-item" href="#">My Collections</a></li>
+<!--									<li><a class="dropdown-item" href="#">My Collections</a></li>-->
 								</ul>
 							</li>
 							
@@ -246,6 +246,6 @@
 	<script src="js/alertifyjs/alertify.min.js"></script>
 	<script src="js/ellipsis.min.js"></script>
 	<script src="js/fancybox/fancybox.umd.js"></script>
-	<script src="js/script.js?v=23"></script>
+	<script src="js/script.js?v=24"></script>
 </body>
 </html>
