--- a/token.html
+++ b/token.html
@@ -66,7 +66,7 @@
 					</h2>
 					<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
 						<div class="accordion-body">
-							Created by multimedia artist Eugene Oligo, our collaboration entitled Titans of the Industry features the pioneers, entrepreneurs, and titans of the crypto space. This collection will surely help you recognize the big ones, their feats, and their impact on the blockchain world.
+							Created by multimedia artist Eugene Oligo, our collaboration entitled Titans of Industry features the pioneers, entrepreneurs, and titans of the crypto space. This collection will surely help you recognize the big ones, their feats, and their impact on the blockchain world.
 						</div>
 					</div>
 				</div>
