--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 						<div class="bg-color-19 neo-black text-color-6 font-size-160 font-size-md-200 py-2 position-absolute w-100" style="top:0; right:-99%; z-index:-1">&nbsp;</div>
 					</div>
 					<div class="text-white neo-bold font-size-120 font-size-md-160 mb-4">ABOUT THE COLLECTION</div>
-					<div class="text-white neo-bold font-size-80 mb-2">Created by multimedia artist Eugene Oligo, our collaboration entitled Titans of Industry features the pioneers, entrepreneurs, and titans of the crypto space. This collection will surely help you recognize the big ones, their feats, and their impact on the blockchain world.</div>
+					<div class="text-white font-size-80 mb-2">Created by multimedia artist Eugene Oligo, our collaboration entitled Titans of Industry features the pioneers, entrepreneurs, and titans of the crypto space. This collection will surely help you recognize the big ones, their feats, and their impact on the blockchain world.</div>
 				</div>
 			</div>
 			
