Update loading of transaction hash on sold tokens and fix description ellipsis in carousel

--- a/token.html
+++ b/token.html
@@ -158,6 +158,8 @@
 			</div>
 		</div>
 		
-		<div class="d-none" id="tokens-container"></div>
+		<div class="position-relative px-5" style="overflow:hidden">
+			<div class="invisible position-absolute w-100 px-5" id="tokens-container" style="top:0; left:0"></div>
+		</div>
 	</div>
 </div>
