Update Ownly and Marketplace contract address

--- a/token.html
+++ b/token.html
@@ -20,6 +20,19 @@
 				</div>
 			</div>
 			
+			<div class="row align-items-center d-none mb-4">
+				<div class="col-6">
+					<div>
+						<a href="#" target="_blank" class="font-size-90 text-decoration-none d-none" id="token-bscscan-transaction-hash">View on BscScan</a>
+					</div>
+					<div class="font-size-100 neo-bold">Owner</div>
+					<div class="font-size-90 owner-address"></div>
+				</div>
+				<div class="col-6">
+					<div class="w-100 font-size-100 font-size-md-120 text-center neo-bold link" style="border-radius:5px; background-color:#e1e3e3; border-color:#c7c9c9; padding-top:6px; padding-bottom:6px; line-height:1.5">SOLD OUT</div>
+				</div>
+			</div>
+			
 <!--			<div class="mb-4 d-none">-->
 <!--				<button class="btn btn-secondary px-4" id="create-market-item-confirmation">POST ITEM FOR SALE</button>-->
 <!--			</div>-->
