--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-grow:initial">
 						<ul class="navbar-nav mb-2 mb-lg-0">
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle text-color-6" href="#" id="account-address" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
-								<ul class="dropdown-menu" aria-labelledby="account-address">
+							<li class="nav-item" id="account-address"></li>
+							
+<!--							<li class="nav-item dropdown">-->
+<!--								<a class="nav-link dropdown-toggle text-color-6" href="#" id="account-address" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>-->
+<!--								<ul class="dropdown-menu" aria-labelledby="account-address">-->
 <!--									<li><a class="dropdown-item" href="#">My Collections</a></li>-->
-								</ul>
-							</li>
+<!--								</ul>-->
+<!--							</li>-->
 							
 							<li class="nav-item" id="connect-to-metamask-container">
 								<button type="button" class="btn btn-custom-9 shadow-sm font-size-90 py-2 px-4" id="connect-to-metamask" style="border-radius:100px">Connect Wallet</button>
@@ -196,7 +198,7 @@
 							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 						</div>
 						<div class="modal-body">
-							<div>Are you sure you want to purchase this item?</div>
+							<div>Are you sure you want to purchase this token?</div>
 						</div>
 						<div class="modal-footer justify-content-center">
 							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
@@ -236,16 +238,32 @@
 					</div>
 				</div>
 			</div>
+			
+			<div class="modal fade" id="modal-wrong-network" tabindex="-1">
+				<div class="modal-dialog modal-dialog-centered modal-sm">
+					<div class="modal-content">
+						<div class="modal-body">
+							<div class="text-center mt-3 mb-3">
+								<i class="fas fa-exclamation-circle font-size-400 text-color-3"></i>
+							</div>
+							<h5 class="w-100 font-size-100 text-center">You are current on the wrong network!</h5>
+						</div>
+						<div class="modal-footer justify-content-center">
+							<button type="button" class="btn btn-secondary px-4" data-bs-dismiss="modal">Okay</button>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="js/web3.min.js"></script>
-	<script src="js/abi.js?v=9"></script>
+	<script src="js/abi.js?v=11"></script>
 	<script src="js/alertifyjs/alertify.min.js"></script>
 	<script src="js/ellipsis.min.js"></script>
 	<script src="js/fancybox/fancybox.umd.js"></script>
-	<script src="js/script.js?v=27"></script>
+	<script src="js/script.js?v=28"></script>
 </body>
 </html>
