Show sold out in token view for owners

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<a class="navbar-brand m-0" href="/">
 							<img src="img/ownly/own-token.webp" width="53" alt="Ownly">
 						</a>
-						<a href="/" class="link-color-1 font-size-170 rubik-black ps-2 text-decoration-none">OWNLY</a>
+						<a href="https://ownly.io/dev-marketplace/" class="link-color-1 font-size-170 rubik-black ps-2 text-decoration-none">OWNLY</a>
 					</div>
 					
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -264,6 +264,6 @@
 	<script src="js/alertifyjs/alertify.min.js"></script>
 	<script src="js/ellipsis.min.js"></script>
 	<script src="js/fancybox/fancybox.umd.js"></script>
-	<script src="js/script.js?v=28"></script>
+	<script src="js/script.js?v=29"></script>
 </body>
 </html>
