--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="OWNLY is a governance, token-based NFT platform that enable creators and collectors optimize the authentic value of NFT assets. Ownly is created to be a meeting place of artworks and collectors in the crypto space.">
 	<meta name="author" content="Ownly">
 	
-	<meta property="og:url" content="https://ownly.io" />
+	<meta property="og:url" content="https://ownly.io/dev-marketplace/bg/titans.webp" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Ownly: Buy, own, collect, and trade 1 of 1 edition crypto artworks by talented artists." />
 	<meta property="og:description" content="OWNLY is a governance, token-based NFT platform that enable creators and collectors optimize the authentic value of NFT assets. Ownly is created to be a meeting place of artworks and collectors in the crypto space." />
@@ -38,7 +38,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom fixed-top">
 				<div class="container">
 					<div class="d-flex align-items-center" style="min-height:63px">
-						<a class="navbar-brand m-0" href="/">
+						<a class="navbar-brand m-0" href="https://ownly.io/dev-marketplace/">
 							<img src="img/ownly/own-token.webp" width="53" alt="Ownly">
 						</a>
 						<a href="https://ownly.io/dev-marketplace/" class="link-color-1 font-size-170 rubik-black ps-2 text-decoration-none">OWNLY</a>
