--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="OWNLY is a governance, token-based NFT platform that enable creators and collectors optimize the authentic value of NFT assets. Ownly is created to be a meeting place of artworks and collectors in the crypto space.">
 	<meta name="author" content="Ownly">
 	
-	<meta property="og:url" content="https://ownly.io" />
+	<meta property="og:url" content="https://ownly.io/dev-marketplace" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Ownly: Buy, own, collect, and trade 1 of 1 edition crypto artworks by talented artists." />
 	<meta property="og:description" content="OWNLY is a governance, token-based NFT platform that enable creators and collectors optimize the authentic value of NFT assets. Ownly is created to be a meeting place of artworks and collectors in the crypto space." />
