Change of image file format

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Ownly: Buy, own, collect, and trade 1 of 1 edition crypto artworks by talented artists." />
 	<meta property="og:description" content="OWNLY is a governance, token-based NFT platform that enable creators and collectors optimize the authentic value of NFT assets. Ownly is created to be a meeting place of artworks and collectors in the crypto space." />
-	<meta property="og:image" content="https://ownly.io/dev-marketplace/img/bg/titans.webp" />
+	<meta property="og:image" content="https://ownly.io/dev-marketplace/img/bg/titans.jpg" />
 	
 	<title>Ownly Marketplace</title>
 	<link rel="icon" href="img/ownly/own-token.webp">
