Update meta tags for production

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<meta name="description" content="OWNLY is a governance, token-based NFT platform that enable creators and collectors optimize the authentic value of NFT assets. Ownly is created to be a meeting place of artworks and collectors in the crypto space.">
 	<meta name="author" content="Ownly">
 	
-	<meta property="og:url" content="https://ownly.io/dev-marketplace" />
+	<meta property="og:url" content="https://ownly.io/marketplace" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Ownly: Buy, own, collect, and trade 1 of 1 edition crypto artworks by talented artists." />
 	<meta property="og:description" content="OWNLY is a governance, token-based NFT platform that enable creators and collectors optimize the authentic value of NFT assets. Ownly is created to be a meeting place of artworks and collectors in the crypto space." />
-	<meta property="og:image" content="https://ownly.io/dev-marketplace/img/bg/titans.jpg" />
+	<meta property="og:image" content="https://ownly.io/marketplace/img/bg/titans.jpg" />
 	
 	<title>Ownly Marketplace</title>
 	<link rel="icon" href="img/ownly/own-token.webp">
@@ -38,10 +38,10 @@
 			<nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom fixed-top">
 				<div class="container">
 					<div class="d-flex align-items-center" style="min-height:63px">
-						<a class="navbar-brand m-0" href="https://ownly.io/dev-marketplace/">
+						<a class="navbar-brand m-0" href="https://ownly.io/marketplace">
 							<img src="img/ownly/own-token.webp" width="53" alt="Ownly">
 						</a>
-						<a href="https://ownly.io/dev-marketplace/" class="link-color-1 font-size-170 rubik-black ps-2 text-decoration-none">OWNLY</a>
+						<a href="https://ownly.io/marketplace" class="link-color-1 font-size-170 rubik-black ps-2 text-decoration-none">OWNLY</a>
 					</div>
 					
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -264,6 +264,6 @@
 	<script src="js/alertifyjs/alertify.min.js"></script>
 	<script src="js/ellipsis.min.js"></script>
 	<script src="js/fancybox/fancybox.umd.js"></script>
-	<script src="js/script.js?v=31"></script>
+	<script src="js/script.js?v=32"></script>
 </body>
 </html>
