--- a/artist.html
+++ b/artist.html
@@ -35,7 +35,10 @@
 					
 					<div>
 						<p class="text-color-6 font-size-110">Eugene is a multimedia artist that focuses on digital illustrations, digital painting, and both 2D and 3D concept art. He also creates traditional artworks such as paintings and portraits.</p>
-						<p class="text-color-6 font-size-110">He served many clients locally, nationally, and internationally. He had a collaboration project with Titus pens as the guest artist who made a doodle wall art with other creatives.</p>
+						<p class="text-color-6 font-size-110 mb-4 pb-2">He served many clients locally, nationally, and internationally. He had a collaboration project with Titus pens as the guest artist who made a doodle wall art with other creatives.</p>
+						<p class="text-color-6 font-size-110 mb-0">
+							<a href="https://medium.com/ownlyio/get-to-know-the-gifted-artist-behind-ownlys-titans-of-industry-nft-collection-dc49ac98658b" target="_blank" class="text-color-6">Read more</a>
+						</p>
 					</div>
 				</div>
 			</div>
