--- a/home.html
+++ b/home.html
@@ -20,28 +20,15 @@
 						<div class="bg-color-19 neo-black text-color-6 font-size-160 font-size-md-200 py-2 position-absolute w-100" style="top:0; right:-99%; z-index:-1">&nbsp;</div>
 					</div>
 					<div class="text-white neo-bold font-size-120 font-size-md-160 mb-4">ABOUT THE COLLECTION</div>
-					<div class="text-white font-size-80 mb-2">Created by multimedia artist Eugene Oligo, our collaboration entitled Titans of Industry features the pioneers, entrepreneurs, and titans of the crypto space. This collection will surely help you recognize the big ones, their feats, and their impact on the blockchain world.</div>
+					<div class="text-white font-size-80 mb-4">Created by multimedia artist Eugene Oligo, our collaboration entitled Titans of Industry features the pioneers, entrepreneurs, and titans of the crypto space. This collection will surely help you recognize the big ones, their feats, and their impact on the blockchain world.</div>
+					<div class="text-white font-size-80">
+						<a href="https://medium.com/ownlyio/ownlys-second-nft-collection-titans-of-the-industry-by-eugene-oligo-4ead34f50026" target="_blank" class="text-white">Read more</a>
+					</div>
 				</div>
 			</div>
 			
 			<div class="d-none d-lg-block py-2" id="banner-right" style="">
 				<div class="background-image-contain" style="background-image:url('img/bg/Titans_BannerImage.webp'); height:calc(100% + 30px); width:calc(100% + 200px); z-index:99"></div>
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="position-absolute w-100 bg-white d-none" style="bottom:0; left:0">
-	<div class="container py-3 py-md-4">
-		<div class="row align-items-center">
-			<div class="col-md-6 mb-3 mb-md-4 mb-lg-0">
-				<div class="neo-black font-size-160 font-size-md-220 font-size-xl-250 line-height-100 mb-1">TITANS OF INDUSTRY</div>
-				<div class="font-size-100 font-size-md-120 font-size-xl-140">by Eugene Oligo</div>
-			</div>
-			
-			<div class="col-md-6">
-				<div class="font-size-100 font-size-xl-120 neo-black mb-2">ABOUT THE COLLECTION</div>
-				<div class="font-size-80 font-size-xl-90 line-height-120">Created by multimedia artist Eugene Oligo, our collaboration entitled Titans of Industry features the pioneers, entrepreneurs, and titans of the crypto space. This collection will surely help you recognize the big ones, their feats, and their impact on the blockchain world.</div>
 			</div>
 		</div>
 	</div>
