Add version display and update environment variables setup

--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
 			<nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom fixed-top">
 				<div class="container">
 					<div class="d-flex align-items-center" style="min-height:63px">
-						<a class="navbar-brand m-0" href="https://ownly.io/marketplace">
+						<a class="#" href="https://ownly.io/marketplace">
 							<img src="img/ownly/own-token.webp" width="53" alt="Ownly">
 						</a>
-						<a href="https://ownly.io/marketplace" class="link-color-1 font-size-170 rubik-black ps-2 text-decoration-none">OWNLY</a>
+						<a href="#" class="link-color-1 text-decoration-none ps-2" style="line-height:0.1em">
+							<span class="font-size-170 rubik-black website-home-link">OWNLY</span><br>
+							<span class="font-size-70 neo-bold">Marketplace 1.0.0-alpha</span>
+						</a>
 					</div>
 					
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -264,6 +267,6 @@
 	<script src="js/alertifyjs/alertify.min.js"></script>
 	<script src="js/ellipsis.min.js"></script>
 	<script src="js/fancybox/fancybox.umd.js"></script>
-	<script src="js/script.js?v=35"></script>
+	<script src="js/script.js?v=36" id="script"></script>
 </body>
 </html>
