Update home banner, og image and version display

--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 	<div class="bg-white position-absolute h-100 d-none d-lg-block" style="top:0; left:70%; width:30%; z-index:-1"></div>
 	
 	<div class="container">
-		<div class="d-flex w-100" style="min-height:calc(100vh - 80px)">
+		<div class="d-flex w-100 py-5" style="min-height:calc(100vh - 80px)">
 			<div id="banner-left" style="">
 				<div class="d-flex flex-column justify-content-center h-100">
 					<div class="text-color-9 alegreya-italic font-size-160 font-size-md-200 mb-4"><span class="alegreya-bold-italic">OWNLY</span> PRESENTS</div>
