--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Ownly: Buy, own, collect, and trade 1 of 1 edition crypto artworks by talented artists." />
 	<meta property="og:description" content="OWNLY is a governance, token-based NFT platform that enable creators and collectors optimize the authentic value of NFT assets. Ownly is created to be a meeting place of artworks and collectors in the crypto space." />
-	<meta property="og:image" content="https://ownly.io/marketplace/img/bg/titans.jpg" />
+	<meta property="og:image" content="https://ownly.io/marketplace/img/bg/titans-2.jpg" />
 	
 	<title>Ownly Marketplace</title>
 	<link rel="icon" href="img/ownly/own-token.webp">
@@ -41,10 +41,20 @@
 						<a class="#" href="https://ownly.io/marketplace">
 							<img src="img/ownly/own-token.webp" width="53" alt="Ownly">
 						</a>
-						<a href="#" class="link-color-1 text-decoration-none ps-2" style="line-height:0.1em">
-							<span class="font-size-170 rubik-black website-home-link">OWNLY</span><br>
-							<span class="font-size-70 neo-bold">Marketplace 1.0.0-alpha</span>
-						</a>
+						<div class="ps-2">
+							<a href="#" class="link-color-1 text-decoration-none">
+								<div class="">
+									<div class="d-flex align-items-center">
+										<div class="font-size-150 font-size-sm-200 rubik-black website-home-link line-height-90">OWNLY</div>
+										<div class="bg-color-6 text-center text-white py-1 px-2 ms-2">
+											<div class="font-size-60 font-size-sm-70 rubik-bold line-height-100">1.0.0</div>
+											<div class="font-size-60 font-size-sm-50 rubik-regular line-height-100">ALPHA</div>
+										</div>
+									</div>
+									<div class="font-size-70 font-size-sm-93 rubik-bold line-height-90">MARKETPLACE</div>
+								</div>
+							</a>
+						</div>
 					</div>
 					
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -267,6 +277,6 @@
 	<script src="js/alertifyjs/alertify.min.js"></script>
 	<script src="js/ellipsis.min.js"></script>
 	<script src="js/fancybox/fancybox.umd.js"></script>
-	<script src="js/script.js?v=36" id="script"></script>
+	<script src="js/script.js?v=37" id="script"></script>
 </body>
 </html>
