Update logo link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<img src="img/ownly/own-token.webp" width="53" alt="Ownly">
 						</a>
 						<div class="ps-2">
-							<a href="#" class="link-color-1 text-decoration-none">
+							<a href="#" class="link-color-1 text-decoration-none website-home-link">
 								<div class="">
 									<div class="d-flex align-items-center">
 										<div class="font-size-150 font-size-sm-200 rubik-black website-home-link line-height-90">OWNLY</div>
